; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_47080.c_send_ssl_packet.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_47080.c_send_ssl_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32, i32, i32, i64 }

@BUFSIZE = common dso_local global i32 0, align 4
@MD5_DIGEST_LENGTH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [60 x i8] c"send_ssl_packet: Record length out of range (rec_len = %d)\0A\00", align 1
@RC4_KEY_LENGTH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @send_ssl_packet(%struct.TYPE_3__* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %13 = load i32, i32* @BUFSIZE, align 4
  %14 = zext i32 %13 to i64
  %15 = call i8* @llvm.stacksave()
  store i8* %15, i8** %7, align 8
  %16 = alloca i8, i64 %14, align 16
  store i64 %14, i64* %8, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 4
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %3
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* @MD5_DIGEST_LENGTH, align 4
  %24 = add nsw i32 %22, %23
  store i32 %24, i32* %10, align 4
  br label %27

25:                                               ; preds = %3
  %26 = load i32, i32* %6, align 4
  store i32 %26, i32* %10, align 4
  br label %27

27:                                               ; preds = %25, %21
  %28 = load i32, i32* %10, align 4
  %29 = add nsw i32 2, %28
  %30 = load i32, i32* @BUFSIZE, align 4
  %31 = icmp sgt i32 %29, %30
  br i1 %31, label %32, label %36

32:                                               ; preds = %27
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @printf(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str, i64 0, i64 0), i32 %33)
  %35 = call i32 @exit(i32 1) #4
  unreachable

36:                                               ; preds = %27
  store i8* %16, i8** %9, align 8
  %37 = load i32, i32* %10, align 4
  %38 = load i8*, i8** %9, align 8
  %39 = call i32 @s2n(i32 %37, i8* %38)
  %40 = getelementptr inbounds i8, i8* %16, i64 0
  %41 = load i8, i8* %40, align 16
  %42 = zext i8 %41 to i32
  %43 = or i32 %42, 128
  %44 = trunc i32 %43 to i8
  %45 = getelementptr inbounds i8, i8* %16, i64 0
  store i8 %44, i8* %45, align 16
  %46 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 4
  %48 = load i64, i64* %47, align 8
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %82

50:                                               ; preds = %36
  %51 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %51, i32 0, i32 1
  %53 = load i32, i32* %52, align 8
  %54 = call i32 @ntohl(i32 %53)
  store i32 %54, i32* %12, align 4
  %55 = call i32 @MD5_Init(i32* %11)
  %56 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %57 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %56, i32 0, i32 0
  %58 = load i32*, i32** %57, align 8
  %59 = load i32, i32* @RC4_KEY_LENGTH, align 4
  %60 = call i32 (i32*, ...) @MD5_Update(i32* %11, i32* %58, i32 %59)
  %61 = load i8*, i8** %5, align 8
  %62 = load i32, i32* %6, align 4
  %63 = call i32 (i32*, ...) @MD5_Update(i32* %11, i8* %61, i32 %62)
  %64 = call i32 (i32*, ...) @MD5_Update(i32* %11, i32* %12, i32 4)
  %65 = load i8*, i8** %9, align 8
  %66 = call i32 @MD5_Final(i8* %65, i32* %11)
  %67 = load i32, i32* @MD5_DIGEST_LENGTH, align 4
  %68 = load i8*, i8** %9, align 8
  %69 = sext i32 %67 to i64
  %70 = getelementptr inbounds i8, i8* %68, i64 %69
  store i8* %70, i8** %9, align 8
  %71 = load i8*, i8** %9, align 8
  %72 = load i8*, i8** %5, align 8
  %73 = load i32, i32* %6, align 4
  %74 = call i32 @memcpy(i8* %71, i8* %72, i32 %73)
  %75 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %76 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %75, i32 0, i32 3
  %77 = load i32, i32* %76, align 8
  %78 = load i32, i32* %10, align 4
  %79 = getelementptr inbounds i8, i8* %16, i64 2
  %80 = getelementptr inbounds i8, i8* %16, i64 2
  %81 = call i32 @RC4(i32 %77, i32 %78, i8* %79, i8* %80)
  br label %87

82:                                               ; preds = %36
  %83 = load i8*, i8** %9, align 8
  %84 = load i8*, i8** %5, align 8
  %85 = load i32, i32* %6, align 4
  %86 = call i32 @memcpy(i8* %83, i8* %84, i32 %85)
  br label %87

87:                                               ; preds = %82, %50
  %88 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %89 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %88, i32 0, i32 2
  %90 = load i32, i32* %89, align 4
  %91 = load i32, i32* %10, align 4
  %92 = add nsw i32 2, %91
  %93 = call i32 @send(i32 %90, i8* %16, i32 %92, i32 0)
  %94 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %95 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %94, i32 0, i32 1
  %96 = load i32, i32* %95, align 8
  %97 = add nsw i32 %96, 1
  store i32 %97, i32* %95, align 8
  %98 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %98)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @printf(i8*, i32) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

declare dso_local i32 @s2n(i32, i8*) #2

declare dso_local i32 @ntohl(i32) #2

declare dso_local i32 @MD5_Init(i32*) #2

declare dso_local i32 @MD5_Update(i32*, ...) #2

declare dso_local i32 @MD5_Final(i8*, i32*) #2

declare dso_local i32 @memcpy(i8*, i8*, i32) #2

declare dso_local i32 @RC4(i32, i32, i8*, i8*) #2

declare dso_local i32 @send(i32, i8*, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
